<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WalkingGroup</string>
    <string name="apikey" tools:ignore="TypographyDashes">51B4A229-C683-477B-B37E-1ABF72610F869</string>
    <string name="loginTitle">Login</string>
    <string name="emailEdit">E-mail</string>
    <string name="sign_up_prompt">Don\'t Have An Account?  Sign Up Here</string>
    <string name="signup_txtview">Sign Up</string>
    <string name="input_email_txtview">Please enter an E-mail address: </string>
    <string name="input_user_email">Enter an e-mail address: </string>
    <string name="user_email_hint">E-mail</string>
    <string name="input_pass_txtview">Choose a password:</string>
    <string name="confirm_pass_txtview">Confirm your password:</string>
    <string name="signup_btn">Sign Up</string>
    <string name="duplicated_email"> Email is already registered.</string>
    <string name="welcome_user_name"><![CDATA[Welcome <user name>!]]></string>
    <string name="view_map">View Map</string>
    <string name="manage_group">Manage Groups</string>
    <string name="please_enter_name"> Please enter your name </string>
    <string name="please_enter_email"> Please enter your email address </string>
    <string name="password_empty"> Please enter valid password.</string>
    <string name="passwords_dont_match"> Password does NOT match. </string>
    <string name="full_name_sign">Full Name</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="monitoring">You are monitoring: </string>
    <string name="monitored">You are being monitored by: </string>
    <string name="password_empty_login">Password is empty</string>
    <string name="email_empty_login">E-mail is empty</string>
    <string name="group_id_empty">Enter a group I.D.</string>
    <string name="success_sign_up">Successfully signed up</string>
    <string name="no_success_sign_up">Request unsuccessful</string>
    <string name="logged_out">Logged Out</string>
    <string name="add_monitoring_btn">ADD</string>
    <string name="add">+</string>
    <string name="remove_user_txtview">You are about to remove this-user from your monitor list!</string>
    <string name="remove_monitored">You are about to stop this-user from monitoring you!</string>
    <string name="removal_from_group">You are about to remove this-user from this-group!</string>
    <string name="monitor">MONITOR</string>
    <string name="get_monitored">GET MONITORED</string>
    <string name="remove_user_alert">Are you sure?</string>
    <string name="email_not_found"> Email is not found.</string>
    <string name="group_not_found">Group is not found.</string>
    <string name="group_id">Enter a group I.D.</string>
    <string name="remove_from_group">REMOVE THIS-USER FROM A GROUP</string>
    <string name="add_to_group">ADD THIS-USER TO A GROUP</string>
    <string name="remove_group">REMOVE GROUP</string>
    <string name="ok">CONFIRM</string>
    <string name="select_destination">Select Destination</string>
    <string name="destination">Destination:</string>
    <string name="select_starting_location">Select Starting Location</string>
    <string name="starting_location">Starting Location:</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="group_name">Group Name:</string>
    <string name="add_group">Add Group</string>
    <string name="create_group">Create Group</string>
    <string name="leader_tag">leader</string>
    <string name="you_are_leader">You are this group\'s leader</string>
    <string name="cant_delete_leader">Cannot delete leader</string>
    <string name="success_deletion">Successfully deleted user</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">SEND</string>
    <string name="cancel">CANCEL</string>
    <string name="remove_user_from_group_prompt">Would you remove this user from the group?</string>
    <string name="error_occurred">Error occurred</string>
    <string name="no_users_string">No users are in this group</string>
    <string name="remove_group_toast">You are removed from the group</string>
    <string name="comment">/////</string>
    <string name="add_group_name">Enter a group name:</string>
    <string name="birthday_sign_up">Birthday (optional)</string>
    <string name="address_sign_up">Address (optional)</string>
    <string name="home_phone_sign_up">Home phone (optional)</string>
    <string name="cell_phone_sign_up">Cell phone (optional)</string>
    <string name="grade_students_sign_up">Grade (Students only)</string>
    <string name="teacher_students_sign_up">Teacher (Students only)</string>
    <string name="emergency_contact_info_sign_up">Emergency contact Info</string>
    <string name="account_info">Account Info</string>
    <string name="log_out">Log Out</string>
    <string name="update_info">Update Info</string>
    <string name="account_information">Account Information</string>
    <string name="user_info">User Info</string>
    <string name="birth_year">Birth year</string>
    <string name="birth_month">Birth month</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="home_phone">Home phone</string>
    <string name="cell_phone">Cell phone</string>
    <string name="grade">Grade</string>
    <string name="teacher">Teacher</string>
    <string name="emergency_contact_info">Emergency contact Info</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_group_title">Create group</string>
    <string name="manage_monitoring">Monitoring</string>
    <string name="manage_groups">Groups</string>
    <string name="manage_messages">Messages</string>
    <string name="add_user_monitor_you">Add User to Monitor You</string>
    <string name="user_to_monitor">Add User to Monitor</string>
    <string name="leader_of_group">Group leader: </string>
    <string name="parent_information">Parents:</string>
    <string name="map">Map</string>
    <string name="new_message">New Message</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="parents_message">Monitoring Message</string>
    <string name="group_message">Group Message</string>
    <string name="title_activity_parent_maps">Map</string>
    <string name="log_in">Log In</string>
    <string name="walk">Walk</string>
    <string name="monitoring_title">Monitoring: %s</string>
    <string name="edit_info">Edit Info</string>
    <string name="emergency_message">Emergency Message</string>
    <string name="parentDashboard">Parent Dashboard</string>
    <string name="emergency_button">Panic Button</string>
    <string name="parent_dashboard">Parent Dashboard</string>
    <string name="permissions"> Permissions</string>
    <string name="request_from"> "Request From: "</string>
    <string name="rewards_shop">Rewards Shop</string>
    <string name="reward">reward</string>
    <string name="price">price</string>
    <string name="buy">buy</string>
    <string name="points">%1$d Points</string>
    <string name="reward_types">%1$s: %2$s</string>
    <string name="current_points">Your current points: %s</string>
    <string name="total_score_display">Your total score is: %d</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="apply">Apply</string>
    <string name="applied">Applied</string>
    <string name="not_enough_points">You do not have enough points. Keep walking!</string>
    <string name="permissions_button">permissions</string>
</resources>
