<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.AccountInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/user_info_txtview"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/userInfoUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:hint="@string/full_name_sign"
                android:inputType="none"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userInfoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:ems="10"
                android:hint="@string/e_mail_hint"
                android:inputType="none"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/userInfoBirthMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/birth_month"
                    android:inputType="none" />

                <EditText
                    android:id="@+id/userInfoBirthYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/birth_year"
                    android:inputType="none" />
            </LinearLayout>

            <EditText
                android:id="@+id/userInfoAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:ems="10"
                android:hint="@string/address_sign_up"
                android:inputType="none" />

            <EditText
                android:id="@+id/userInfoHomePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:ems="10"
                android:hint="@string/home_phone_sign_up"
                android:inputType="none" />

            <EditText
                android:id="@+id/userInfoCellPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:ems="10"
                android:hint="@string/cell_phone_sign_up"
                android:inputType="none" />

            <EditText
                android:id="@+id/userInfoGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:ems="10"
                android:hint="@string/grade_students_sign_up"
                android:inputType="none" />

            <EditText
                android:id="@+id/userInfoTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:ems="10"
                android:hint="@string/teacher_students_sign_up"
                android:inputType="none" />

            <EditText
                android:id="@+id/userInfoEmergencyContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:ems="10"
                android:hint="@string/emergency_contact_info_sign_up"
                android:inputType="none" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/user_info_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_info"
        android:textSize="24sp" />

</RelativeLayout>
