<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.AccountInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/update_info_btn"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/account_info_txtview"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/accountInfoUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:hint="@string/full_name_sign"
                android:inputType="none"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/accountInfoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:ems="10"
                android:hint="@string/e_mail_hint"
                android:inputType="none"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/accountInfoBirthMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Birth month"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/accountInfoBirthYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Birth year"
                    android:inputType="date" />
            </LinearLayout>

            <EditText
                android:id="@+id/accountInfoAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/address_sign_up"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/accountInfoHomePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/home_phone_sign_up"
                android:inputType="phone" />

            <EditText
                android:id="@+id/accountInfoCellPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/cell_phone_sign_up"
                android:inputType="phone" />

            <EditText
                android:id="@+id/accountInfoGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/grade_students_sign_up"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/accountInfoTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/teacher_students_sign_up"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/accountInfoEmergencyContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/emergency_contact_info_sign_up"
                android:inputType="textPersonName" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/account_info_txtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/account_information"
        android:textSize="24sp" />

    <Button
        android:id="@+id/update_info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/update_info" />

</RelativeLayout>
