<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reward_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/reward_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/reward"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reward_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignBottom="@+id/buy"
        android:layout_alignStart="@+id/reward_name"
        android:text="@string/price"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buy"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/reward_name"
        android:layout_marginEnd="10dp"
        android:scaleType="centerInside"
        android:text="@string/buy" />
</RelativeLayout>
