<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.AddMonitoredActivity">

    <Button
        android:id="@+id/get_monitored_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/find_user_edit_txt2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        android:text="@string/get_monitored" />

    <EditText
        android:id="@+id/find_user_edit_txt2"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:ems="10"
        android:hint="@string/user_email_hint"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="135dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/find_user_edit_txt2"
        android:layout_marginTop="68dp"
        android:text="@string/input_user_email"
        android:textSize="18sp" />
</RelativeLayout>