<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.DashboardActivity">

    <TextView
        android:id="@+id/welcome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/welcome_user_name"
        android:textSize="24sp" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/viewMapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome_user"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:text="@string/view_map" />

            <Button
                android:id="@+id/manage_monitoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewMapButton"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:text="@string/manage_monitoring" />

            <Button
                android:id="@+id/manage_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/manage_monitoring"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:text="@string/manage_group" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>